[metadata]
# replace with your username:
name = imgkit
version = 1.2.2
author = Jarrekk
author_email = me@jarrekk.com
description = Wkhtmltopdf python wrapper to convert html to image using the webkit rendering engine and qt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jarrekk/imgkit
project_urls =
    Bug Tracker = https://github.com/jarrekk/imgkit/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src